# OOP-Project

./: CMakeLists.txt  Commands.cpp  Commands.hpp  Example input.docx  README.md  XMLElement.cpp  XMLElement.hpp  XMLGeneratorT.cpp  XMLGeneratorT.hpp  XMLParser.cpp  XMLParser.hpp  XMLPath.hpp  XMLTree.cpp  XMLTree.hpp  attributes.hpp  file.xml  main.cpp  tag.hpp
CPP files/: Commands.cpp  Runner.cpp  XMLElement.cpp  XMLGeneratorT.cpp  XMLParser.cpp  XMLPath.cpp  XMLTree.cpp  main.cpp
DOCUMENTATION WITH DOXYGEN/: DOCUMENTATION  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _commands_8cpp.html  _commands_8hpp.html  _commands_8hpp_source.html  _final_project_8dir_2_commands_8cpp_8obj_8d.html  _final_project_8dir_2_x_m_l_element_8cpp_8obj_8d.html  _final_project_8dir_2_x_m_l_generator_t_8cpp_8obj_8d.html  _final_project_8dir_2_x_m_l_parser_8cpp_8obj_8d.html  _final_project_8dir_2_x_m_l_path_8cpp_8obj_8d.html  _final_project_8dir_2_x_m_l_tree_8cpp_8obj_8d.html  _final_project_8dir_2tests_for_generator_8cpp_8obj_8d.html  _runner_8cpp.html  _runner_8cpp_8obj_8d.html  _runner_8hpp.html  _runner_8hpp.js  _runner_8hpp_source.html  _tests_8dir_2_commands_8cpp_8obj_8d.html  _tests_8dir_2_x_m_l_element_8cpp_8obj_8d.html  _tests_8dir_2_x_m_l_generator_t_8cpp_8obj_8d.html  _tests_8dir_2_x_m_l_parser_8cpp_8obj_8d.html  _tests_8dir_2_x_m_l_path_8cpp_8obj_8d.html  _tests_8dir_2_x_m_l_tree_8cpp_8obj_8d.html  _tests_8dir_2tests_for_generator_8cpp_8obj_8d.html  _x_m_l_element_8cpp.html  _x_m_l_element_8hpp.html  _x_m_l_element_8hpp.js  _x_m_l_element_8hpp_source.html  (+94 more)
(+15 files in other folders)
